// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio matches snapshot not selected 1`] = `
<li
  className="group relative bg-white rounded-lg shadow-sm cursor-pointer focus:outline-none"
>
  <div
    className="rounded-lg border border-gray-300 bg-white px-6 py-4 hover:border-gray-400"
  >
    Test
  </div>
  <div
    className="absolute inset-0 rounded-lg border-2 pointer-events-none border-transparent"
  />
</li>
`;

exports[`Radio matches snapshot selected 1`] = `
<li
  className="group relative bg-white rounded-lg shadow-sm cursor-pointer focus:outline-none"
>
  <div
    className="rounded-lg border border-gray-300 bg-white px-6 py-4 hover:border-gray-400"
  >
    Test
  </div>
  <div
    className="absolute inset-0 rounded-lg border-2 pointer-events-none border-primary"
  />
</li>
`;

exports[`RadioGroup matches snapshot 1`] = `
<fieldset>
  <ul
    className="space-y-4"
    role="radiogroup"
  >
    <li
      className="group relative bg-white rounded-lg shadow-sm cursor-pointer focus:outline-none"
      onClick={[Function]}
    >
      <div
        className="rounded-lg border border-gray-300 bg-white px-6 py-4 hover:border-gray-400"
      >
        Test 1
      </div>
      <div
        className="absolute inset-0 rounded-lg border-2 pointer-events-none border-transparent"
      />
    </li>
    <li
      className="group relative bg-white rounded-lg shadow-sm cursor-pointer focus:outline-none"
      onClick={[Function]}
    >
      <div
        className="rounded-lg border border-gray-300 bg-white px-6 py-4 hover:border-gray-400"
      >
        Test 2
      </div>
      <div
        className="absolute inset-0 rounded-lg border-2 pointer-events-none border-transparent"
      />
    </li>
  </ul>
</fieldset>
`;
